[metadata]
name = ansible-vault-win
version = 0.2.1
description = Stand-alone Ansible Vault CLI that works on Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sparkyb/ansible-vault-win
author = Ben Buchwald
author_email = ben@ngcreative.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
license = MIT
license_file = LICENSE.txt

[options]
packages = find:
include_package_data = True
install_requires =
    cryptography
python_requires = >=3.6

[options.entry_points]
console_scripts =
    ansible-vault = ansible_vault.cli:main
